# Luminis

./: .gitignore
src/: CMakeLists.txt  comunicacion_sync.cpp  control_global.cpp  control_global.hpp  filesystem_utils.cpp  filesystem_utils.hpp  gestor_distribucion.cpp  gestor_distribucion.hpp  main.cpp  modo_mpi_openmp_cuda.cpp  modo_mpi_openmp_cuda.hpp  modo_openmp_cuda.cu  modo_openmp_cuda.hpp  modo_serial.cpp  modo_serial.hpp  placeholder.cpp  postprocesamiento.cpp  preprocesamiento.cpp  preprocesamiento.hpp  procesamiento_gpu.cpp  procesamiento_gpu.cu  procesamiento_gpu.hpp
src/test/: CMakeLists.txt  test_filesystem.cpp  test_main.cpp  test_preprocesamiento.cpp  test_procesamiento_gpu.cu
